Update form attributes

--- a/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
@@ -60,7 +60,7 @@
 {% block bodyPanel %}
 {% set ns = namespace() %}
 <div class="content">
-	<form id="customPatchForm" action="#">
+	<form id="customPatchForm" action="#" method="post" enctype="multipart/form-data">
 		<div id="wizard">
 			<h1>Patch Information</h1>
 			<section>
