--- a/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
@@ -66,7 +66,7 @@
 
 {% block bodyPanel %}
 <div class="content">
-	<form id="softwarePKGForm" action="#">
+    <form id="softwarePKGForm" action="#" method="post" enctype="multipart/form-data">
 		<div id="wizard">
 			<!-- Section 1 -->
 			<h1>Software Package Information</h1>
