Console and API app fixes

--- a/Source/Server/apps/mpconsole/templates/client_download.html
+++ b/Source/Server/apps/mpconsole/templates/client_download.html
@@ -59,8 +59,8 @@
                                     {% for row in data %}
                                     <tr>
                                         <td>
-                                            <a href="#" onclick="downloadAgent('/mp-content/clients/{{row.puuid}}/MPClientInstall.pkg.zip');return false;">
-                                                <i class="glyphicon glyphicon-save"></i> MPClientInstall.pkg.zip
+                                            <a href="#" onclick="downloadAgent('/mp-content/clients/{{row.puuid}}/MacPatch.pkg.zip');return false;">
+                                                <i class="glyphicon glyphicon-save"></i> MacPatch.pkg.zip
                                             </a>
                                         </td>
                                         <td>{{row.version}}</td>
