--- a/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
@@ -174,6 +174,25 @@
 					</div>
 				</div>
 				<br>
+                <h4>Software Application Path</h4>
+				<div class="container-fluid">
+					<div class="form-group">
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Application Path</label>
+							</div>
+							<div class="col-md-7">
+                                <input type="text" id="sw_app_path" name="sw_app_path" SIZE="60" value="{{data['PKG'].sw_app_path or ''}}">
+							</div>
+							<div class="col-md-3">
+								<small>
+                                    Application path (e.g. /Applications/Chess.app). Used for catalog detection.
+                                </small>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
 				<h4>Package</h4>
 				<div class="container-fluid">
 					<div class="form-group">
@@ -228,7 +247,7 @@
 
 						<div class="row top-buffer">
 							<div class="col-md-2">
-								<label>Patch Requires Reboot</label>
+								<label>Software Requires Reboot</label>
 							</div>
 							<div class="col-md-7">
 								<select name="sReboot" size="1">
@@ -242,8 +261,11 @@
 						</div>
 					</div>
 				</div>
-				<br>
-				<h4>Patching</h4>
+			</section>
+			<!-- Section 3 -->
+			<h1>Patching</h1>
+            <section>
+				<h4>Software Patching</h4>
 				<div class="container-fluid">
 					<div class="form-group">
 
@@ -278,8 +300,8 @@
 
 					</div>
 				</div>
-			</section>
-			<!-- Section 3 -->
+            </section>
+            <!-- Section 4 -->
 			<h1>Filters</h1>
 			<section>
 				<h4>Install Filters</h4>
@@ -332,7 +354,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- Section 4 --->
+			<!-- Section 5 --->
 			<h1>Scripts</h1>
 			<section>
 				<h4>Package Scripts</h4>
