--- a/Source/MacPatch/MacPatch/MacPatch/Preferences/PrefsUpdatesVC.xib
+++ b/Source/MacPatch/MacPatch/MacPatch/Preferences/PrefsUpdatesVC.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15400" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15400"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PrefsUpdatesVC">
             <connections>
                 <outlet property="allowInstallRebootPatchesCheckBox" destination="xFi-8d-Uei" id="XLj-gS-eMK"/>
+                <outlet property="authState" destination="jfY-EO-HMA" id="mTG-cp-Ce7"/>
                 <outlet property="pausePatchingCheckBox" destination="fkL-p0-oKI" id="JhD-Wu-Ytg"/>
                 <outlet property="preStageRebootPatchesBox" destination="I19-Dk-aer" id="HNK-To-bmY"/>
                 <outlet property="scanOnLaunchCheckBox" destination="Ei2-Rz-hzL" id="oeX-al-nEp"/>
@@ -18,11 +19,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="312"/>
+            <rect key="frame" x="0.0" y="0.0" width="472" height="415"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ei2-Rz-hzL">
-                    <rect key="frame" x="18" y="276" width="356" height="18"/>
+                    <rect key="frame" x="18" y="379" width="356" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Scan for patches on launch" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="zRJ-ye-tP3">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -33,7 +34,7 @@
                     </connections>
                 </button>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I19-Dk-aer">
-                    <rect key="frame" x="18" y="256" width="356" height="18"/>
+                    <rect key="frame" x="18" y="359" width="356" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Pre-Stage reboot patches" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="Q2Y-6p-3B4">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -44,7 +45,7 @@
                     </connections>
                 </button>
                 <box autoresizesSubviews="NO" fixedFrame="YES" borderType="line" title="Reboot Patches" translatesAutoresizingMaskIntoConstraints="NO" id="Wxa-VK-4zf">
-                    <rect key="frame" x="17" y="125" width="438" height="100"/>
+                    <rect key="frame" x="17" y="228" width="438" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView" id="2tT-JQ-5V5">
                         <rect key="frame" x="3" y="3" width="432" height="82"/>
@@ -74,7 +75,7 @@
                     </view>
                 </box>
                 <box autoresizesSubviews="NO" fixedFrame="YES" borderType="line" title="Pause Patching" translatesAutoresizingMaskIntoConstraints="NO" id="d5e-xQ-tZ3">
-                    <rect key="frame" x="17" y="25" width="438" height="96"/>
+                    <rect key="frame" x="17" y="128" width="438" height="96"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView" id="coS-AF-iPW">
                         <rect key="frame" x="3" y="3" width="432" height="78"/>
@@ -103,8 +104,58 @@
                         </subviews>
                     </view>
                 </box>
+                <box autoresizesSubviews="NO" fixedFrame="YES" borderType="line" title="FileVault - Authrestart" translatesAutoresizingMaskIntoConstraints="NO" id="EEr-Uo-YqP">
+                    <rect key="frame" x="17" y="16" width="438" height="108"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <view key="contentView" id="Xr2-sp-j8F">
+                        <rect key="frame" x="3" y="3" width="432" height="90"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EGa-bO-123">
+                                <rect key="frame" x="9" y="8" width="412" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Note: If the user changes their password this will need to be re-setup" id="Sxq-51-T7W">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mt8-gd-Dx6">
+                                <rect key="frame" x="5" y="47" width="76" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Setup" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="rkH-ff-UeE">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="setupAuthrestart:" target="-2" id="ns7-Jt-WnW"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OEC-yQ-4Ec">
+                                <rect key="frame" x="353" y="47" width="72" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Clear" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cFZ-R9-pkb">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="clearAuthrestart:" target="-2" id="xm7-gb-M0F"/>
+                                </connections>
+                            </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jfY-EO-HMA">
+                                <rect key="frame" x="81" y="57" width="272" height="14"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="truncatingTail" id="HNv-Rj-g5O">
+                                    <font key="font" metaFont="message" size="11"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </view>
+                </box>
             </subviews>
-            <point key="canvasLocation" x="120" y="124"/>
+            <point key="canvasLocation" x="116" y="175.5"/>
         </customView>
     </objects>
 </document>
