--- a/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 
 {% block styles %}
+    <!-- Set MetaData -->
+    {% if hasOSArch == True %}
+        {% set orderTypeSize = 4 %}
+    {% else %}
+        {% set orderTypeSize = 3 %}
+    {% endif %}
+
+    {% for cri in dataCritAlt %}
+        {% if cri['type_order'] >= orderTypeSize %}
+            <meta id="cri-data{{ cri['type_order'] }}" data-value="{{ cri['type_data'] }}">
+        {% endif %}
+    {% endfor %}
+
+
 	<!-- Bootstrap Core CSS -->
 	<link href="{{ url_for('static', filename='yarn_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
 	<!-- Custom CSS -->
@@ -252,7 +266,7 @@
 					</div>
 				</div>
 			</section>
-			<h1>Patch Package</h1>
+            <h1>Patch Package</h1>
 			<section>
 				<h4>Patch Package</h4>
 				<hr>
@@ -328,6 +342,79 @@
 								<small>
                                     Note: Please verify that S3 has been configured. Before using.<br>
                                     Upload speed will be slower, than local storage.
+                                </small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Installer Env Variables</label>
+							</div>
+							<div class="col-md-7">
+								<input type="text" id="env_var" name="pkg_env_var" SIZE="80" value="{{data.pkg_env_var or ''}}">
+							</div>
+							<div class="col-md-2">
+								<small>(Example: ATTR=VALUE,ATTR=VALUE)</small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Patch Install Weight</label>
+							</div>
+							<div class="col-md-7">
+								<div class="range range-primary">
+									<input name="patch_install_weight" min="0" max="100" step="1" value="{{data.patch_install_weight}}" onchange="rangePrimary.value=value" type="range">
+									<output id="rangePrimary">{{data.patch_install_weight}}</output>
+								</div>
+							</div>
+							<div class="col-md-2">
+								<small>Sets a patch install weight order.<br>Lower = Earlier</small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Patch Requires Reboot</label>
+							</div>
+							<div class="col-md-7">
+								<select name="patch_reboot" size="1">
+									<option {% if data.patch_reboot == "No" %} Selected {% endif %}>No</option>
+									<option {% if data.patch_reboot == "Yes" %} Selected {% endif %}>Yes</option>
+								</select>
+							</div>
+							<div class="col-md-2">&nbsp;</div>
+						</div>
+					</div>
+				</div>
+			</section>
+            <h1>Patch Install</h1>
+			<section>
+				<h4>Patch Install Options</h4>
+				<hr>
+				<div class="container-fluid">
+					<div class="form-group">
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Patch Application Path</label>
+							</div>
+							<div class="col-md-7">
+								<input type="text" name="bundle_id" SIZE="80" required="Yes"  message="Error [Patch Group ID]: A patch group id is required." value="{{data.bundle_id or ''}}">
+							</div>
+							<div class="col-md-2">
+								<small>(e.g. /Applications/Google Chrome.app/Contents/MacOS/Google Chrome)</small>
+							</div>
+						</div>
+                        <div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Quit Application</label>
+							</div>
+							<div class="col-md-7">
+								<select name="pkg_useS3" size="1">
+									<option value="0" {% if data.pkg_useS3 == 0 %} Selected {% endif %}>No</option>
+									<option value="1" {% if data.pkg_useS3 == 1 %} Selected {% endif %}>Yes</option>
+								</select>
+							</div>
+							<div class="col-md-2">
+								<small>
+                                    Note: This will prompt a user to quit an app before it's patched.
                                 </small>
 							</div>
 						</div>
@@ -481,7 +568,6 @@
 					// Loop and add values to new form data obj
 					for (var pair of formData.entries())
 					{
-						//console.log('Eval: '+pair[0]);
 						if (pair[0] == 'mainPatchFile')
 						{
 							if( $('#mainPatchFile').val() == '' )
@@ -489,7 +575,6 @@
 								continue;
 							}
 						}
-						//console.log('Append: '+pair[0]);
 						formDataNew.append(pair[0], pair[1]);
 					}
 					// Add the criteria to form dict as needed
@@ -550,9 +635,7 @@
 				},
 				onFinished: function (event, currentIndex)
 				{
-					//alert("Submitted!");
-                    // console.log("onFinished:");
-					// parent.closeIFrame();
+					// alert("Submitted!");
 				}
 			});
 
@@ -570,9 +653,8 @@
 						x = {}
 						x['order'] = {{cri['type_order'] or 0}};
 						x['type'] = "{{cri['type'] or 'File'}}";
-						x['data'] = `{{ cri['type_data'] }}`;
-						
-						var _instance = addRow(x['order'], x['type'], x['data']);
+
+                        var _instance = addRow(x['order'], x['type'], '');
 						xeditors.push({ id: x['order'], instance: _instance });
 						document.getElementById('reqid').value = x['order'];
 						{% set xi = xi + 1 %}
@@ -638,7 +720,7 @@
 
 				// Center Column
 				_htm = _htm + '<div class="col-md-7">';
-				_htm = _htm + '<div id="editor_' + sid +'">'+data+'</div>';
+				_htm = _htm + '<div id="editor_' + sid +'"></div>';
 				_htm = _htm + '</div>'; //Center
 
 				// Right Column
@@ -652,12 +734,13 @@
 				$('.block:last').after(_htm);
 
 				try {
-					_name = 'editor_' + sid
+					_name = 'editor_' + sid;
+                    _meta = '#cri-data' + sid;
 					vars[_name] = ace.edit("editor_" + sid);
 					vars[_name].setTheme("ace/theme/eclipse");
 					vars[_name].getSession().setMode("ace/mode/sh");
+					vars[_name].session.setValue( $(_meta).data("value") );
 					vars[_name].setFontSize('10px');
-					//vars[_name].insert(data); // This way the encoding gets all messed up
 				} catch (err) {
 					console.log("console catch:" + err);
 				}
